--- a/ch/index.html
+++ b/ch/index.html
@@ -38,7 +38,9 @@ Modernizr.load({
 		
  	 <div class="row header-row" >
       <div class="columns header-inner large-12"> 
-      	<a href="ch/index.html"><img style="width:200px;" src="images/namelogo.jpg" alt=""></a>
+      	      	  <!--<a href="en/index.html"><img style="width:200px;" src="images/namelogo.jpg" alt=""></a>-->
+		 <span class="email1"><img src = "../images/email.png"   style="width:22px; height:22px; padding-right:3px" />alice@szjspcb.com</span>
+		 <span class="whatsapp"><img src = "../images/whatsapp.png"   style="width:28px; height:28px" />+8619866616077</span>
       	 <span style="float:right">
       	 	<a style="cursor: pointer;" href="../en/index.html">English</a>&nbsp;|&nbsp;<a style="cursor: pointer;" href="../ch/index.html">中文</a>
       	 </span>
