--- a/ch/about.html
+++ b/ch/about.html
@@ -323,9 +323,9 @@ Modernizr.load({
   
 </div>
 <p><a class="loader" href="#inline_content"></a></p>
-<script src="js/jquery.min.js"></script>
-<script src="js/hoverIntent.js"></script>
-<script src="js/superfish.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/hoverIntent.js"></script>
+<script src="../js/superfish.js"></script>
 <script>
 Modernizr.load({
     test: Modernizr.placeholder,
