--- a/ch/index.html
+++ b/ch/index.html
@@ -109,11 +109,11 @@ Modernizr.load({
 	    <div class="row feature-box-row">
 	      <div class="columns large-12 feature-box-inner">
 	        <div class="row">
-	          <div class="columns large-4 small-4  pr20"> <a href="#"><img src="../product_images/pcb/fr4/001.jpg" alt=""> </a> 
+	          <div class="columns large-4 small-4  pr20"> <a href="#"><img src="../product_images/index/1.png" alt=""> </a> 
 	          </div>
-	          <div class="columns large-4 small-4  pr20"> <a href="#"><img src="../product_images/pcba/004.jpg" alt=""> </a> 
+	          <div class="columns large-4 small-4  pr20"> <a href="#"><img src="../product_images/index/2.jpg" alt=""> </a> 
 	          </div>
-	          <div class="columns large-4 small-4  pr20"> <a href="#"><img src="../product_images/pcb/fr4/006.jpg" alt=""> </a> 
+	          <div class="columns large-4 small-4  pr20"> <a href="#"><img src="../product_images/index/3.jpg" alt=""> </a> 
 	          </div>
 	        </div>
 	      </div>
