--- a/en/index.html
+++ b/en/index.html
@@ -96,12 +96,9 @@ Modernizr.load({
 		          </div>
 		          <div class="columns large-6 slider-text-box">
 		            <h3>Shenzhen JIA SHENG Electronics Co.，Ltd</h3>
-		            <p> Shenzhen JIA SHENG Electronics Co.,Ltd is a professional production company of single-sided，double-sided．multi-layer printed circuit boards and electronic components purchasing company. 
-						Operation Principle:Quality is first,Second:Customer,Third: Innovation and progress 
-						The company has gathered a group of more than 6 years of practical experience in the high professionalism of the personnel.
-						All PCB  carry out the quality management system of ISO9001:2008，all products meet IPC and ROHS's standards and  UL ROSH's Standards.
-						Our products are widely used in LED,communications,medical,industrial control，home appliances and other fields，and sell to domestic and Southeast Asia,Europe,America and Ukraine 
-						Your satisfaction is one of the largest recognition for our work.
+		            <p> Shenzhen JIA SHENG Electronics Co., Ltd. a professional consumer electronic manufacturer  which provides variety of mobile accessories and consumer electronic products, like cellphone accessories,, bluetooth& wireless earphone smart watch speakers,wireless charger,car electronic .power bank ,phone case, etc. By integrating R&D, design, production, oversea warehouse and rich commercial resource, we provide one-stop-service and promote customers achieve rapidly development.
+					For Larger order free provide past sticker for FBA 
+					10 years ODM/OEM Drop shipping experience 
 		            </p>
 		          </div>
 		        </div>
@@ -112,11 +109,11 @@ Modernizr.load({
 	    <div class="row feature-box-row">
 	      <div class="columns large-12 feature-box-inner">
 	        <div class="row">
-	          <div class="columns large-4 small-4  pr20"> <a href="#"><img src="../product_images/pcb/fr4/001.jpg" alt=""> </a> 
+	          <div class="columns large-4 small-4  pr20"> <a href="#"><img src="../product_images/index/1.png" alt=""> </a> 
 	          </div>
-	          <div class="columns large-4 small-4  pr20"> <a href="#"><img src="../product_images/pcba/004.jpg" alt=""> </a> 
+	          <div class="columns large-4 small-4  pr20"> <a href="#"><img src="../product_images/index/2.jpg" alt=""> </a> 
 	          </div>
-	          <div class="columns large-4 small-4  pr20"> <a href="#"><img src="../product_images/pcb/fr4/006.jpg" alt=""> </a> 
+	          <div class="columns large-4 small-4  pr20"> <a href="#"><img src="../product_images/index/3.jpg" alt=""> </a> 
 	          </div>
 	        </div>
 	      </div>
